insert placeholders for new instruction classes

--- a/doc/tex/appx-instr_encode.tex
+++ b/doc/tex/appx-instr_encode.tex
@@ -135,6 +135,20 @@
 \begin{bytefield}[bitwidth={1.2em},endianness={big}]{32}
 \bitheader{0-31}            
 \\
+% TODO
+\end{bytefield}
+\end{center}
+\caption{An overview of instruction encoding: class $2.7$, per \REFSEC{sec:spec:instruction:2:7}.}
+\label{fig:instr_encode:2:7}
+\end{figure}                                                                   
+
+% =============================================================================
+
+\begin{figure}[!ht]
+\begin{center}
+\begin{bytefield}[bitwidth={1.2em},endianness={big}]{32}
+\bitheader{0-31}            
+\\
 \XCRYPTOENCODE{xc.aessub}        
 \XCRYPTOENCODE{xc.aesmix}        
 \end{bytefield}
@@ -190,6 +204,34 @@
 \end{center}
 \caption{An overview of instruction encoding: class $3.4$, per \REFSEC{sec:spec:instruction:3:4}.}
 \label{fig:instr_encode:3:4}
+\end{figure}                                                                   
+
+% =============================================================================
+
+\begin{figure}[!ht]
+\begin{center}
+\begin{bytefield}[bitwidth={1.2em},endianness={big}]{32}
+\bitheader{0-31}            
+\\
+% TODO
+\end{bytefield}
+\end{center}
+\caption{An overview of instruction encoding: class $3.5$, per \REFSEC{sec:spec:instruction:3:5}.}
+\label{fig:instr_encode:3:5}
+\end{figure}                                                                   
+
+% =============================================================================
+
+\begin{figure}[!ht]
+\begin{center}
+\begin{bytefield}[bitwidth={1.2em},endianness={big}]{32}
+\bitheader{0-31}            
+\\
+% TODO
+\end{bytefield}
+\end{center}
+\caption{An overview of instruction encoding: class $3.6$, per \REFSEC{sec:spec:instruction:3:6}.}
+\label{fig:instr_encode:3:6}
 \end{figure}                                                                   
 
 % =============================================================================
