--- a/doc/tex/appx-instr_equiv.tex
+++ b/doc/tex/appx-instr_equiv.tex
@@ -94,6 +94,11 @@ add   rd2, rd2, rs2 //      rd2 += overflow bit?
 
 % =============================================================================
 
+\subsection{Class-$2.6$: masking}
+\label{appx:instr_equiv:2:7}
+
+% =============================================================================
+
 \subsection{Class-$3.1$: AES}
 \label{appx:instr_equiv:3:1}
 
@@ -111,5 +116,15 @@ add   rd2, rd2, rs2 //      rd2 += overflow bit?
 
 \subsection{Class-$3.4$: SM4}
 \label{appx:instr_equiv:3:4}
+
+% =============================================================================
+
+\subsection{Class-$3.5$: ChaCha20}
+\label{appx:instr_equiv:3:5}
+
+% =============================================================================
+
+\subsection{Class-$3.6$: Alzette}
+\label{appx:instr_equiv:3:6}
 
 % =============================================================================
