--- a/doc/tex/appx-instr_syntax.tex
+++ b/doc/tex/appx-instr_syntax.tex
@@ -153,6 +153,22 @@ Class                 & Syntax                          & Section               
 \hline                                                                             
 Class                 & Syntax                          & Section                                    \\
 \hline\hline                                                                         
+% TODO
+\hline                                                                             
+\end{tabular}
+\end{center}
+\caption{An overview of instruction syntax, including reference to associated semantics: class $2.7$, per \REFSEC{sec:spec:instruction:2:7}.}
+\label{tab:instr_syntax:2:7}
+\end{table}                                                                      
+
+% =============================================================================
+
+\begin{table}[!ht]
+\begin{center}
+\begin{tabular}{|c|l|l|}
+\hline                                                                             
+Class                 & Syntax                          & Section                                    \\
+\hline\hline                                                                         
 \multirow{ 2}{*}{3.1} & \XCRYPTOSYNTAXUSE{xc.aessub}    & \REFSEC{sec:spec:instruction:xc.aessub}    \\
                       & \XCRYPTOSYNTAXUSE{xc.aesmix}    & \REFSEC{sec:spec:instruction:xc.aesmix}    \\
 \hline                                                                             
@@ -213,6 +229,38 @@ Class                 & Syntax                           & Section              
 \end{center}
 \caption{An overview of instruction syntax, including reference to associated semantics: class $3.4$, per \REFSEC{sec:spec:instruction:3:4}.}
 \label{tab:instr_syntax:3:4}
+\end{table}                                                                      
+
+% =============================================================================
+
+\begin{table}[!ht]
+\begin{center}
+\begin{tabular}{|c|l|l|}
+\hline                                                                             
+Class                 & Syntax                          & Section                                    \\
+\hline\hline                                                                         
+% TODO
+\hline                                                                             
+\end{tabular}
+\end{center}
+\caption{An overview of instruction syntax, including reference to associated semantics: class $3.5$, per \REFSEC{sec:spec:instruction:3:5}.}
+\label{tab:instr_syntax:3:5}
+\end{table}                                                                      
+
+% =============================================================================
+
+\begin{table}[!ht]
+\begin{center}
+\begin{tabular}{|c|l|l|}
+\hline                                                                             
+Class                 & Syntax                          & Section                                    \\
+\hline\hline                                                                         
+% TODO
+\hline                                                                             
+\end{tabular}
+\end{center}
+\caption{An overview of instruction syntax, including reference to associated semantics: class $3.6$, per \REFSEC{sec:spec:instruction:3:6}.}
+\label{tab:instr_syntax:3:6}
 \end{table}                                                                      
 
 % =============================================================================
