--- a/doc/tex/bg-feature.tex
+++ b/doc/tex/bg-feature.tex
@@ -11,17 +11,20 @@ Description                                & Class           & Numeric ID & Mnem
 \hline\hline
 \multirow{1}{*}{Required                 } & Baseline        & $1$        & BASE        & \REFSEC{sec:spec:instruction:1}   \\
 \hline
-\multirow{6}{*}{Optional, general-purpose} & Randomness      & $2.1$      & RND         & \REFSEC{sec:spec:instruction:2:1} \\
+\multirow{7}{*}{Optional, general-purpose} & Randomness      & $2.1$      & RND         & \REFSEC{sec:spec:instruction:2:1} \\
                                            & Memory          & $2.2$      & MEM         & \REFSEC{sec:spec:instruction:2:2} \\
                                            & Bit-oriented    & $2.3$      & BIT         & \REFSEC{sec:spec:instruction:2:3} \\
                                            & Packed          & $2.4$      & PACK        & \REFSEC{sec:spec:instruction:2:4} \\
                                            & Multi-precision & $2.5$      & MP          & \REFSEC{sec:spec:instruction:2:5} \\
                                            & Leakage         & $2.6$      & LEAK        & \REFSEC{sec:spec:instruction:2:6} \\
+                                           & Masking         & $2.7$      & MASK        & \REFSEC{sec:spec:instruction:2:7} \\
 \hline
-\multirow{4}{*}{Optional, special-purpose} & AES             & $3.1$      & AES         & \REFSEC{sec:spec:instruction:3:1} \\
+\multirow{6}{*}{Optional, special-purpose} & AES             & $3.1$      & AES         & \REFSEC{sec:spec:instruction:3:1} \\
                                            & SHA2            & $3.2$      & SHA2        & \REFSEC{sec:spec:instruction:3:2} \\
                                            & SHA3            & $3.3$      & SHA3        & \REFSEC{sec:spec:instruction:3:3} \\
                                            & SM4             & $3.4$      & SM4         & \REFSEC{sec:spec:instruction:3:4} \\
+                                           & ChaCha20        & $3.5$      & CHACHA20    & \REFSEC{sec:spec:instruction:3:5} \\
+                                           & Alzette         & $3.6$      & ALZETTE     & \REFSEC{sec:spec:instruction:3:6} \\
 \hline
 \end{tabular}
 \end{center}
