--- a/doc/tex/spec-instruction.tex
+++ b/doc/tex/spec-instruction.tex
@@ -1098,6 +1098,13 @@ high overhead) software-based carry and overflow management.
 
 % =============================================================================
 
+\subsubsection{Class-$2.7$: masking}
+\label{sec:spec:instruction:2:7}
+
+% -----------------------------------------------------------------------------
+
+% =============================================================================
+
 \subsubsection{Class-$3.1$: AES}
 \label{sec:spec:instruction:3:1}
 
@@ -1415,6 +1422,24 @@ support all SHA3 parameterisations).
                                      \XOR ( t \LRT 23 )$ \;
   }
 }
+
+% =============================================================================
+
+\subsubsection{Class-$3.5$: ChaCha20}
+\label{sec:spec:instruction:3:5}
+
+% ----------------------------------------------------------------------------
+
+% TODO
+
+% =============================================================================
+
+\subsubsection{Class-$3.6$: Alzette}
+\label{sec:spec:instruction:3:6}
+
+% ----------------------------------------------------------------------------
+
+% TODO
 
 % =============================================================================
 
