added content related to masking ISE

--- a/doc/spec.tex
+++ b/doc/spec.tex
@@ -82,6 +82,12 @@ Bristol, BS8 1UB, United Kingdom.\\
 
 \import{./tex/}{appx-instr_equiv.tex}
 
+\clearpage
+\section{Additional algorithms}
+\label{appx:algorithm}
+
+\import{./tex/}{appx-algorithm.tex}
+
 % =============================================================================
 
 \end{document}
