--- a/doc/tex/bg-feature.tex
+++ b/doc/tex/bg-feature.tex
@@ -23,8 +23,8 @@ Description                                & Class           & Numeric ID & Mnem
                                            & SHA2            & $3.2$      & SHA2        & \REFSEC{sec:spec:instruction:3:2} \\
                                            & SHA3            & $3.3$      & SHA3        & \REFSEC{sec:spec:instruction:3:3} \\
                                            & SM4             & $3.4$      & SM4         & \REFSEC{sec:spec:instruction:3:4} \\
-                                           & ChaCha20        & $3.5$      & CHACHA20    & \REFSEC{sec:spec:instruction:3:5} \\
-                                           & Alzette         & $3.6$      & ALZETTE     & \REFSEC{sec:spec:instruction:3:6} \\
+                                           & ChaCha20        & $3.5$      & CHA         & \REFSEC{sec:spec:instruction:3:5} \\
+                                           & Alzette         & $3.6$      & ALZ         & \REFSEC{sec:spec:instruction:3:6} \\
 \hline
 \end{tabular}
 \end{center}
